[package]
name = "embedded-flex-pin"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A portable trait abstraction for GPIO pins that can switch between input and output modes at runtime."
license = "MIT OR Apache-2.0"
repository = "https://github.com/loongsoldier/embedded-flex-pin"
keywords = ["embedded", "gpio", "hal", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "1.0.0"
